关于SpringMVC与MyBatis框架的代码文件

--- a/coolshark/src/main/resources/application.properties
+++ b/coolshark/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/weibo?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://localhost:3306/cs?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
 #配置静态资源文件夹,classpath:static指原来的static文件夹
 #如果不添加classpath:static会将现有的static给废掉
 spring.web.resources.static-locations=file:G:/files,classpath:static
