--- a/coolshark/src/main/resources/application.properties
+++ b/coolshark/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/cs?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
 #配置静态资源文件夹,classpath:static指原来的static文件夹
 #如果不添加classpath:static会将现有的static给废掉
-spring.web.resources.static-locations=file:G:/files,classpath:static
+spring.web.resources.static-locations=file:${dirPath},classpath:static
 #设置上传文件大小  默认1MB
 spring.servlet.multipart.max-file-size=10MB
 #配置Mybatis书写SQL语句的xml文件的位置
 mybatis.mapper-locations=classpath:mappers/*xml
-
+#配置静态资源文件夹路径,利用${}调用
+dirPath=G:/files
 
