--- a/coolshark/src/main/resources/application.properties
+++ b/coolshark/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/cs?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true
